--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 public/images/livres/1-1984-6453e5be9c08b914352100.jpg
+public/images/livres/1-1984-6453f27594b94991060005.jpg
